[package]
name = "backtester"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version ="0.4.40", features = ["serde"] }
polars = "0.46.0"
polars-io = { version = "0.46.0", features = ["parquet"] }
polars-core = "0.46.0"
colored = "3.0.0"
rand = "0.9.0"
charming = "0.4.0"
serde = "1.0.219"
serde_json = "1.0.140"

